# sidekick-usages

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  install.sh  package-lock.json  package.json  pyproject.toml  release-please-config.json
.claude/: settings.json
.claude/hooks/: cache-websearch.sh  command-guard.py  worktree.sh
.claude/scripts/: statusline-command.sh
.codex/: config.toml
.github/workflows/: bump-homebrew.yml  ci.yml  publish.yml  release-please.yml
docs/: debugging-claude.md  heartbeat.md  token-maintenance.md
packaging/homebrew/: README.md  generate.py  sidekick-usages.rb
src/sidekick_usages/: __init__.py  __main__.py  cli.py  daemon.py  doctor.py  errors.py  http.py  maintenance.py  render.py  report.py  store.py  token_input.py  update.py
src/sidekick_usages/heartbeat/: __init__.py  base.py  claude.py  codex.py  domain.py  registry.py  render.py  service.py
src/sidekick_usages/providers/: __init__.py  base.py  claude.py  codex.py
tests/: test_claude_refresh.py  test_cli_refresh.py  test_codex_provider.py  test_daemon.py  test_docs.py  test_doctor.py  test_header_path.py  test_heartbeat.py  test_homebrew_generator.py  test_http_errors.py  test_packaging.py  test_scope_gate.py  test_smoke.py  test_update.py
